--- a/src/electron_defect_interaction/analysis/wfk/wfk.ipynb
+++ b/src/electron_defect_interaction/analysis/wfk/wfk.ipynb
@@ -7,16 +7,25 @@
    "source": [
     "This is a notebook that reconstructs the electronic wavefunctions from the planewave coefficients computed by the electronic structure code Abinit. According to Bloch's theorem, the electronic wavefunction of a periodic crystal takes the following form\n",
     "\\begin{equation}\n",
-    "    \\psi_{n\\bm{k}}(\\bm{r}) = e^{i\\bm{k}\\cdot\\bm{r}}u_{n\\bm{k}}(\\bm{r}),\n",
+    "    \\psi_{n\\boldsymbol{k}}(\\bm{r}) = e^{i\\boldsymbol{k}\\cdot\\boldsymbol{r}}u_{n\\boldsymbol{k}}(\\boldsymbol{r}),\n",
     "\\end{equation}\n",
-    "i.e. a planewave modulated by a periodic envelop $u_{n\\bm{k}}(\\bm{r}+\\bm{R}) = u_{n\\bm{k}}(\\bm{r})$, where $\\bm{R}$ is any lattice vector. Here, $\\bm{k}$ is the crystal momentum and $n$ is the band index. Abinit is planewave code, meaning the periodic part of the Bloch functions are expanded as planewaves\n",
+    "i.e. a planewave modulated by a periodic envelop $u_{n\\boldsymbol{k}}(\\boldsymbol{r}+\\boldsymbol{R}) = u_{n\\boldsymbol{k}}(\\boldsymbol{r})$, where $\\bm{R}$ is any lattice vector. Here, $\\boldsymbol{k}$ is the crystal momentum and $n$ is the band index. Abinit is planewave code, meaning the periodic part of the Bloch functions are expanded as planewaves\n",
     "\\begin{equation}\n",
-    "    u_{n\\bm{k}} = \\frac{1}{\\sqrt{\\Omega}}\\sum_{\\bm{G}}e^{i\\bm{G}\\cdot\\bm{r}}C_{n\\bm{k}}(\\bm{G}),\n",
+    "    u_{n\\boldsymbol{k}} = \\frac{1}{\\sqrt{\\Omega}}\\sum_{\\boldsymbol{G}}e^{i\\boldsymbol{G}\\cdot\\boldsymbol{r}}C_{n\\boldsymbol{k}}(\\boldsymbol{G}),\n",
     "\\end{equation}\n",
-    "where $\\Omega$ is the unit cell volume, $\\bm{G}$ are the reciprocal lattice vectors, and $C_{n\\bm{k}}(\\bm{G})$ are the coefficients computed by Abinit. Putting these two equations together, we get the following expression for the wavefunction\n",
+    "where $\\Omega$ is the unit cell volume, $\\boldsymbol{G}$ are the reciprocal lattice vectors, and $C_{n\\boldsymbol{k}}(\\boldsymbol{G})$ are the coefficients computed by Abinit. Putting these two equations together, we get the following expression for the wavefunction\n",
     "\\begin{equation}\n",
-    "    \\psi_{n\\bm{k}}(\\bm{r})=\\frac{1}{\\sqrt{\\Omega}}\\sum_{\\bm{G}}e^{i\\bm{r}\\cdot(\\bm{k}+\\bm{G})}C_{n\\bm{k}}(\\bm{G}).\n",
+    "    \\psi_{n\\boldsymbol{k}}(\\boldsymbol{r})=\\frac{1}{\\sqrt{\\Omega}}\\sum_{\\boldsymbol{G}}e^{i\\boldsymbol{r}\\cdot(\\boldsymbol{k}+\\boldsymbol{G})}C_{n\\boldsymbol{k}}(\\boldsymbol{G}).\n",
     "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "870fb347",
+   "metadata": {},
+   "source": [
+    "$\\mathbf{G}\\cdot\\mathbf{r}$\n",
+    "$\\boldsymbol{G}$"
    ]
   },
   {
