--- a/src/electron_defect_interaction/analysis/wfk/wfk.ipynb
+++ b/src/electron_defect_interaction/analysis/wfk/wfk.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "This is a notebook that reconstructs the electronic wavefunctions from the planewave coefficients computed by the electronic structure code Abinit. According to Bloch's theorem, the electronic wavefunction of a periodic crystal takes the following form\n",
     "\\begin{equation}\n",
-    "    \\psi_{n\\boldsymbol{k}}(\\bm{r}) = e^{i\\boldsymbol{k}\\cdot\\boldsymbol{r}}u_{n\\boldsymbol{k}}(\\boldsymbol{r}),\n",
+    "    \\psi_{n\\boldsymbol{k}}(\\boldsymbol{r}) = e^{i\\boldsymbol{k}\\cdot\\boldsymbol{r}}u_{n\\boldsymbol{k}}(\\boldsymbol{r}),\n",
     "\\end{equation}\n",
-    "i.e. a planewave modulated by a periodic envelop $u_{n\\boldsymbol{k}}(\\boldsymbol{r}+\\boldsymbol{R}) = u_{n\\boldsymbol{k}}(\\boldsymbol{r})$, where $\\bm{R}$ is any lattice vector. Here, $\\boldsymbol{k}$ is the crystal momentum and $n$ is the band index. Abinit is planewave code, meaning the periodic part of the Bloch functions are expanded as planewaves\n",
+    "i.e. a planewave modulated by a periodic envelop $u_{n\\boldsymbol{k}}(\\boldsymbol{r}+\\boldsymbol{R}) = u_{n\\boldsymbol{k}}(\\boldsymbol{r})$, where $\\boldsymbol{R}$ is any lattice vector. Here, $\\boldsymbol{k}$ is the crystal momentum and $n$ is the band index. Abinit is planewave code, meaning the periodic part of the Bloch functions are expanded as planewaves\n",
     "\\begin{equation}\n",
     "    u_{n\\boldsymbol{k}} = \\frac{1}{\\sqrt{\\Omega}}\\sum_{\\boldsymbol{G}}e^{i\\boldsymbol{G}\\cdot\\boldsymbol{r}}C_{n\\boldsymbol{k}}(\\boldsymbol{G}),\n",
     "\\end{equation}\n",
