--- a/src/electron_defect_interaction/analysis/defect_me.ipynb
+++ b/src/electron_defect_interaction/analysis/defect_me.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cfdc5147",
    "metadata": {},
    "outputs": [],
@@ -14,10 +14,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from electron_defect_interaction.analysis.defect_me.defect_me import *\n",
-    "from electron_defect_interaction.utils.get_utils import *\n",
-    "from electron_defect_interaction.utils.lattice_utils import red_to_cart\n",
+    "from electron_defect_interaction.io.get_utils import *\n",
+    "from electron_defect_interaction.utils.lattice import red_to_cart\n",
     "from electron_defect_interaction.utils.fft_utils import *\n",
-    "from electron_defect_interaction.utils.pw_utils import *\n",
+    "from electron_defect_interaction.utils.planewaves import *\n",
     "from electron_defect_interaction.analysis.wfk.wfk import compute_psi_nk"
    ]
   },
